--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,9 @@
 .container {
+  height: 500px;
   display: grid;
-  grid-template-columns: 200px 150px 20% 1fr;
-  grid-template-rows: 5rem 2.5rem;
+  /* grid-template-columns: 200px 150px 20% auto; */
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: 5rem auto;
 }
 
 .el1 {
