--- a/02-jonas-css/src/style.css
+++ b/02-jonas-css/src/style.css
@@ -4,7 +4,10 @@
   margin: 0 auto;
   display: grid;
   grid-template-rows: 150px 150px;
-  grid-template-columns: 150px 150px 150px; }
+  grid-template-columns: 150px 150px 150px;
+  row-gap: 30px;
+  column-gap: 50px;
+  gap: 30px; }
 
 .item {
   padding: 20px;
