--- a/02-jonas-css/src/style.scss
+++ b/02-jonas-css/src/style.scss
@@ -6,6 +6,10 @@
   display: grid;
   grid-template-rows: 150px 150px;
   grid-template-columns: 150px 150px 150px;
+
+  row-gap: 30px;
+  column-gap: 50px;
+  gap: 30px;
 }
 
 .item {
