--- a/02-jonas-css/src/style.scss
+++ b/02-jonas-css/src/style.scss
@@ -4,8 +4,9 @@
   margin: 0 auto;
 
   display: grid;
-  grid-template-rows: 150px 150px;
-  grid-template-columns: 150px 150px 150px;
+  grid-template-rows: repeat(2, 150px);
+  grid-template-columns: repeat(2, 150px) 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
 
   row-gap: 30px;
   column-gap: 50px;
