--- a/02-jonas-css/src/style.css
+++ b/02-jonas-css/src/style.css
@@ -17,7 +17,9 @@
   color: white; }
 
 .item--1 {
-  background-color: orange; }
+  background-color: orangered;
+  grid-row: 2 / 3;
+  grid-column: 2/3; }
 
 .item--2 {
   background-color: yellowgreen; }
@@ -29,7 +31,10 @@
   background-color: palevioletred; }
 
 .item--5 {
-  background-color: royalblue; }
+  background-color: royalblue;
+  grid-area: 1 / 3 / 2 / 4; }
 
 .item--6 {
-  background-color: goldenrod; }
+  background-color: goldenrod;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3; }
