--- a/02-jonas-css/src/style.scss
+++ b/02-jonas-css/src/style.scss
@@ -20,7 +20,16 @@
   color: white;
 
   &--1 {
-    background-color: orange;
+    background-color: orangered;
+
+    // syntax1
+    // grid-row-start: 2;
+    // grid-row-end: 3;
+    // grid-column-start: 2;
+    // grid-column-end: 3;
+
+    grid-row: 2 / 3;
+    grid-column: 2/3;
   }
   &--2 {
     background-color: yellowgreen;
@@ -33,8 +42,17 @@
   }
   &--5 {
     background-color: royalblue;
+
+    // syntax2
+    // grid-row: 1 / 2;
+    // grid-column: 3 /4;
+
+    // syntax3
+    grid-area: 1 / 3 / 2 / 4;
   }
   &--6 {
     background-color: goldenrod;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
   }
 }
