--- a/02-jonas-css/src/style.css
+++ b/02-jonas-css/src/style.css
@@ -22,7 +22,9 @@
   grid-column: 2/3; }
 
 .item--2 {
-  background-color: yellowgreen; }
+  background-color: yellowgreen;
+  grid-column: 2 / span 2;
+  grid-column: 1 / -1; }
 
 .item--3 {
   background-color: blueviolet; }
