--- a/02-jonas-css/src/style.scss
+++ b/02-jonas-css/src/style.scss
@@ -33,6 +33,8 @@
   }
   &--2 {
     background-color: yellowgreen;
+    grid-column: 2 / span 2;
+    grid-column: 1 / -1;
   }
   &--3 {
     background-color: blueviolet;
