--- a/02-jonas-css/src/css/practice.css
+++ b/02-jonas-css/src/css/practice.css
@@ -13,7 +13,9 @@
 
 .cell {
   background-color: red;
-  color: #fff; }
+  color: #fff;
+  font-weight: bold;
+  padding: 1rem; }
 
 .header {
   grid-row: 1 / 2;
